# c4_display

./: .gitignore  Cargo.toml  Makefile  README.md  error.rs  lib.rs
animations/: test.mtxani
display/: display.rs  display_interface.rs  display_manager.rs  shift_reg.rs
src/: error.rs  lib.rs  main.rs
src/display/: animation.rs  dec.rs  display.rs  display_interface.rs  display_manager.rs  interface_components.rs  mod.rs  shift_reg.rs
