[package]
name = "c4_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
# rppal = "0.13.1"

[features]
sbs_debug = ["breakpoints"] # Step by step debugging. Stops at every breakpoint
breakpoints = []
disp_debug = []